HEAD
	+ Bug fix: fixed InverseMatchSelect type which is used by Firewall module
	+ New widget for the dashboard showing useful support information
	+ Bugfix: wrong permissions on CSS files caused problem with usercorner
	+ CSS are now templates for easier rebranding
	+ Added default.theme with eBox colors
	+ Bugfix: Allow unsafe characters in password type
	+ Add FollowSymLinks in eBox apache configuration. This is useful
	  if we use js libraries provided by packages
1.3.4
	+ Updated company name in the footer
	+ Bugfix: humanEventMessage works with multiple tableInfos now
	+ Add ebox-dbus-check to test if we can actually connect to dbus
1.3.4
	+ bugfix: empty cache before calling updatedRowNotify
	+ enable Log dispatcher by default and not allow users to disable
	it
	+ consolidation process continues in disabled but configured modules
	+ bugfix: Save Changes button doesn't turn red when accessing events for
	first time
1.3.2
	+ bugfix: workaround issue with dhcp configured interfaces at boot time
1.3.1
	+ bugfix: wrong regex in service status check
1.3.0
	+ bugfix: make full backup work again
1.1.30
	+ Change footer to new company holder
	+  RAID does not generate 'change in completion events, some text
	problems fixed with RAID events
	+ Report graphics had a datapoints limit dependent on the active
	time unit
	+ Apache certificate can be replaced by CA module
	+ Fixed regression in detailed report: total row now aggregates
	properly
	+ More characters allowed when changing password from web GUI
	+ Fixed regression with already used values in select types
	+ Do not a button to restart eBox's apache
	+ Fixed auth problem when dumping and restoring postgre database
1.1.20
	+ Added custom view support
	+ Bugfix: report models now can use the limit parameter in
	  reportRows() method
	+ use a regexp to fetch the PID in a pidfile, some files such as
	postfix's add tabs and spaces before the actual number